Opened 10 years ago

Closed 10 years ago

#5467 closed defect (fixed)

Lossless j2k information no longer shown

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: undetermined
Version: git-master Keywords: codecpar regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Information whether the input j2k stream is lossless is not shown anymore.

$ ffmpeg -i fate-suite/lena.pnm -pred 1 out.j2k
$ ffmpeg -i out.j2k
ffmpeg version N-79598-gdbe1dd5 Copyright (c) 2000-2016 the FFmpeg developers
  built with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      55. 22.101 / 55. 22.101
  libavcodec     57. 38.100 / 57. 38.100
  libavformat    57. 34.103 / 57. 34.103
  libavdevice    57.  0.101 / 57.  0.101
  libavfilter     6. 44.100 /  6. 44.100
  libswscale      4.  1.100 /  4.  1.100
  libswresample   2.  0.101 /  2.  0.101
  libpostproc    54.  0.100 / 54.  0.100
Input #0, j2k_pipe, from 'out.j2k':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: jpeg2000 (JPEG 2000 codestream restriction 0), rgb24, 256x256, 25 tbr, 25 tbn
At least one output file must be specified

Change History (3)

comment:1 by Hendrik, 10 years ago

This is not a container level information and hence not available from avformat.

comment:2 by Carl Eugen Hoyos, 10 years ago

Please fix this regression, it is impossible to know what kind of j2k stream it is without this information.

comment:3 by Michael Niedermayer, 10 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.