libavformat/version.h
@@ -29,6 +29,8 @@
 
 #include "libavutil/version.h"
 
+// When bumping major check Ticket5467 for regressing
+// Also please add any ticket numbers that you belive might regress here
 #define LIBAVFORMAT_VERSION_MAJOR  57
 #define LIBAVFORMAT_VERSION_MINOR  37
 #define LIBAVFORMAT_VERSION_MICRO 101
